css/styles.css
/* ... */
@supports (backdrop-filter: blur()) {
  #navbar {
    background-color: var(--bg-navbar);
    backdrop-filter: blur(6px);
  }

  #burger-bar-background {
    backdrop-filter: blur(6px);
  }
}

li[class|="navbar-item"]>* {
  display: flex;
  cursor: pointer;
  justify-content: space-evenly;
  align-items: center;
  gap: 0.3em;
  padding: 0.4rem;
  margin: 0.25rem;
  height: 0.7rem;
  text-decoration: none;
  color: var(--text);
  border-radius: 0.8rem;
  transform-origin: center;
  transition: background-color 0.15s linear, transform 0.15s ease;
}

li[class|="navbar-item"]:hover {
  background-color: var(--bg-highlight);
}

li[class|="navbar-item"]:active {
  transform: scaleY(0.9);
  transform: scaleX(0.99);
}

li.navbar-item-left {
  float: left;
  transition: background-color 0.15s linear;
  border-radius: 0.8rem;
  margin: 0.3rem;
}

li.navbar-item-right {
  float: right;
  transition: background-color 0.15s linear;
  border-radius: 0.8rem;
  margin: 0.3rem;
}

.navbar-icon {
  width: 1em;
  height: 1em;
  stroke-width:
    /*0.15625rem*/
    2.5px;
}

li.navbar-active {
  background-color: var(--bg-elevated);
}

@media screen and (max-width: 400px) {
  [class|="navbar-text"] {
    display: none;
  }
}

@media screen and (max-width: 600px) {
  .navbar-text-3 {
    display: none;
  }
}





/*Periodensystem*/
#periodensystem {
  display: block;
  margin: 0 auto;
  max-width: min(1000px, 90vw);
  max-height: 100vh;
  width: auto;
  height: auto;
}









/*Expandable*/


.test-exp[data-expanded="true"] {
  grid-template-rows: 1.5em 1fr;
}


.test-exp-header {
  display: flex;
  align-items: center;
  gap: 0.2em;
}

.test-exp-header h3 {
  font-weight: 400;
  font-size: 1.2rem;
}

.test-exp-header svg {
  stroke-width: 0.2em;
  width: 1.2rem;
}

.test-exp-content {
  overflow: hidden;
}

.expandable {
  display: grid;
  margin: 0;
  background-color: var(--bg-elevated);
  border-radius: 2rem;
}

.expandable[data-expanded="false"] {
  grid-template-rows: 1.5em 0fr;
}

.expandable[data-expanded="false"] .expandable-content {
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.expandable[data-expanded="true"] {
  grid-template-rows: 30px 1fr;
}

.expandable[data-expanded="true"] .expandable-content {
  overflow: show;
  padding: 1.95rem;
  transition: height 0.3s ease;
  box-sizing: border-box;
  margin: 0;
  padding-top: 0;
}

.expandable-header>h3 {
  margin: 0;
  width: 100%;
  text-align: left;
  font-family: Inter, sans-serif;
  color: var(--text);
}

.expandable-header {
  background: none;
  border-radius: 2rem;
  border: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1.95rem;
  width: 100%;
  height: 5rem;
  transition: background 0.15s linear;
  cursor: pointer;
}


.expandable-header-icon {
  stroke-width: 0.2rem;
  height: 2em;
  width: 2em;
  color: var(--text-muted);
  transition: rotate 0.3s;
}

.expandable-header::after {
  content: "";
  clear: both;
  display: table;
}

.expandable-content {
  height: 0;
  padding: 1.95rem;
  transition: height 0.3s ease;
  box-sizing: border-box;
  margin: 0;
  padding-top: 0;
}




/* --- DATEN --- */

#daten-werte-abschnitt {
  display: grid;
  grid-template-columns: 15rem auto;
  grid-template-rows: 17.5rem auto auto;
  grid-template-areas: 'grafik liste' 'infotext liste' 'zusatz liste';
  grid-gap: 1rem;
}

/*Grafik*/
#daten-grafik {
  width: 15rem;
  height: 17.5rem;
  min-width: 0;
  display: grid;
  /*grid-template-columns: auto auto;*/
  font-size: 1.3rem;
  color: #fff;
  padding: 1rem;
  margin: 0;
  box-sizing: border-box;
  /*background-color: forestgreen;*/
  grid-area: grafik;
  border-radius: 1rem;
  grid-template-areas:
    "atommasse ordnungszahl"
    "elementsymbol elementsymbol"
    "elementname elementname"
    "atomradius siedepunkt"
    "ionenradius schmelzpunkt"
    "ionisierungsenergie dichte"
    "elektronegativitaet anteil_haeufigstes_isotop";
}

#daten-grafik-elementsymbol,
#daten-grafik-elementname {
  grid-column: 1 / span 2;
  justify-content: center;
  text-align: center;
}

#daten-grafik-elementsymbol {
  font-size: 3rem;
  font-family: 'Inter Tight', Inter, Helvetica, Arial, sans-serif;
}

.daten-grafik-wert {
  align-items: center;
  font-weight: 750;
  transition: font-weight 0.3s, color 0.3s, transform 0.3s;
}

div.daten-on-hover {
  /*Text in der Grafik*/
  font-weight: 900;
  text-shadow: 0.15em 0.15em 0.15em var(--shadow-color);
  color: #aaa;
  transform: scale(1.1);
  transition: font-weight 0.3s, color 0.3s, transform 0.3s;
}

#daten-grafik-oxidationszahl {
  background-color: red;
}

#daten-grafik-ordnungszahl,
#daten-grafik-siedepunkt,
#daten-grafik-schmelzpunkt,
#daten-grafik-dichte,
#daten-grafik-anteil_haeufigstes_isotop {
  justify-content: right;
  text-align: right;
  align-self: right;
}

/*Andere Bestandteile*/
#daten-infotext {
  padding: 0;
  margin-top: 1rem;
  grid-row: 2 / span 1;
  grid-area: infotext;
}

#daten-infotext>* {
  height: 0.9em;
  stroke-width: 0.15rem;
}

#daten-zusatz {
  grid-area: zusatz;
  margin: 0;
  padding: 0;
  align-self: top;
  height: auto;
}




/*Liste*/
#daten-liste {
  grid-area: liste;
  margin: 0;
  grid-row: 1 / span 3;
  overflow: show;
}

#daten-liste tr {
  border-top: 1px solid var(--bg-highlight);
  display: flex;
  align-items: center;
  min-height: 2em;
  position: relative;
  transition: background-color 0.2s;
}

#daten-liste tr:first-child {
  border-top: none;
}

tr.daten-on-hover {
  background-color: var(--bg-highlight);
}

div.daten-info,
span.fachbegriff-info {
  display: none;
  position: absolute;
  background-color: var(--bg-elevated);
  min-width: 0.8rem;
  max-width: 30rem;
  box-shadow: 0.1rem 0.2rem 0.3rem var(--shadow-color);
  left: 2rem;
  bottom: 100%;
  z-index: 1;
  border: 1.5px solid var(--bg-highlight);
  border-radius: 1rem;
  box-sizing: border-box;
  padding: 1rem 1.15rem;
}
/* ... */

